# SignalOS

./: .env.example  .gitignore  AGENTS.md  CALCULATOR_DESIGN_CODEX_PROMPT.md  CHANGELOG.md  CLAUDE.md  CODEX_DEEP_CHECK_PROMPT.md  CODEX_PROMPTS.md  Dockerfile  ISSUES.md  Launch IRAN OPS ENDGAME ENGINE.command  Makefile  NEXT_STEP.md  PLAN.md  PRD.md  README.md  README.md.signalos  STATUS.md  WORKLOG.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  tsconfig.json  vitest.config.ts
.github/: pull_request_template.md
.projectzero/: live-intel-store.json
app/: __init__.py  dashboard.py
backtest/: __init__.py  backtest_engine.py
data/: historical_snapshot_store.py  live_macro_client.py  live_market_client.py  live_news_client.py  live_source_registry.py  variable_registry.json
docs/: ADAPTER_GUIDE.md  ANALYST_WORKFLOW.md  ARCHITECTURE.md  CODEX_LIVE_INGESTION_PROMPT.md  ENVIRONMENT.md  EXPERT_HANDOFF_MANUAL.md  README.md  SCORING_MODEL.md  SETUP.md  VARIABLES.md  agent-workflow.md  architecture-decision-log.md  architecture-decisions.md  architecture-overview.md  architecture.md  backtesting.md  benchmark-methodology.md  calibration.md  catalyst-calendar.md  change-log.md  config-and-env.md  core-modules.md  correctness-review.md  cross-bucket-dislocation.md  data-flow.md  decision-quality-notes.md  deployment-readiness.md  developer-checklist.md  domain-models.md  execution-rules.md  failure-modes.md  final-validation.md  first-agent-tasks.md  full-repo-audit.md  historical-ops-pattern-engine.md  (+26 more)
(+332 files in other folders)
