[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalos-iran"
version = "0.1.0"
description = "SignalOS Iran Phase Detector"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["signalos*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
