[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalos-intelligence"
version = "0.2.0"
description = "SignalOS intelligence API and specialized Iran phase detector"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["signalos*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
